--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,7 +28,7 @@
     <color name="football">#ff7378</color>
     <color name="tennis">#5b93ff</color>
     <color name="backgroundshimmer">#dddddd</color>
-    <color name="graphLine">#008A5D</color>
+    <color name="graphLine">#808080</color>
 
     <color name="swim">#9D8BFF</color>
     <color name="hockey">#FF9030</color>
