--- a/app/src/main/res/layout/activity_vendor_detail.xml
+++ b/app/src/main/res/layout/activity_vendor_detail.xml
@@ -24,6 +24,7 @@
         android:text="Product Details"
         android:textColor="@color/black"
         android:textSize="18.5dp"
+        android:visibility="visible"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,11 +41,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/orderdetails" />
 
-    <ImageView
-        android:id="@+id/imageView7"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_vendor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="24dp"
+        android:layout_marginRight="18dp"
         android:src="@drawable/ic_baseline_search_24"
         app:layout_constraintBottom_toBottomOf="@+id/orderdetails"
         app:layout_constraintEnd_toEndOf="parent"
