--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="Welcome to ONDC aggregator app"
+        android:text="Welcome to Cluster"
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Find what really matters"
+        android:text="One stop solution for all product management"
         android:textColor="@color/AppTextColour"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
         app:boxCornerRadiusBottomEnd="8dp"
         app:boxCornerRadiusBottomStart="8dp"
@@ -82,11 +82,11 @@
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="2dp"
         android:clickable="true"
-        android:text="Forgot password?"
-        android:textSize="11dp"
+        android:text="Forgot password ?"
+        android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
 
@@ -127,14 +127,14 @@
         android:layout_width="161dp"
         android:layout_height="48dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="70dp"
         android:background="@drawable/buttonbg"
         android:backgroundTint="@color/themeapp"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
-        android:text="Log In"
+        android:text="LOG IN"
         android:textColor="@color/black"
         android:textSize="14dp"
         android:textStyle="bold"
