--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,15 +7,27 @@
     tools:context=".ProfileActivity">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+
+        android:layout_marginTop="48dp"
+        android:src="@drawable/ic_baseline_arrow_back_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/AppTextColour" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="78dp"
         app:cardCornerRadius="10dp"
+        android:layout_marginLeft="20dp"
         app:cardElevation="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -54,8 +66,8 @@
         android:id="@+id/cardView6"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="54dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginRight="74dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -71,7 +83,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="24dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/cardView6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +104,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginRight="24dp"
         app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
@@ -106,6 +119,9 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="16dp"
                 app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
+
+                app:cardBackgroundColor="#FFB29B"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -114,7 +130,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="8dp"
-                    android:src="@drawable/ic_outline_person_24" />
+                    android:src="@drawable/ic_outline_person_24"
+                    app:tint="@color/AppTextColour" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -149,8 +166,9 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="24dp"
+        app:cardElevation="2dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,6 +184,9 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="16dp"
                 app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
+
+                app:cardBackgroundColor="#DB95F2FD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -174,6 +195,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="8dp"
+                    app:tint="@color/AppTextColour"
                     android:src="@drawable/ic_outline_sticky_note_2_24" />
             </androidx.cardview.widget.CardView>
 
@@ -209,9 +231,11 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="24dp"
         app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView8">
@@ -226,6 +250,9 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="16dp"
                 app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
+
+                app:cardBackgroundColor="#FFC79D"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -234,6 +261,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="8dp"
+                    app:tint="@color/AppTextColour"
                     android:src="@drawable/ic_baseline_notifications_none_24" />
             </androidx.cardview.widget.CardView>
 
@@ -271,9 +299,11 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="24dp"
         app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView9">
@@ -288,6 +318,9 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="16dp"
                 app:cardCornerRadius="20dp"
+                app:cardBackgroundColor="#DB74FFB7"
+                app:cardElevation="0dp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -296,6 +329,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="8dp"
+                    app:tint="@color/AppTextColour"
                     android:src="@drawable/ic_outline_language_24" />
             </androidx.cardview.widget.CardView>
 
@@ -330,8 +364,10 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="24dp"
+        app:cardElevation="2dp"
+
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -347,6 +383,9 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="16dp"
                 app:cardCornerRadius="20dp"
+                app:cardBackgroundColor="#FFE1AE"
+                app:cardElevation="0dp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -355,6 +394,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="8dp"
+                    app:tint="@color/AppTextColour"
                     android:src="@drawable/ic_baseline_help_outline_24" />
             </androidx.cardview.widget.CardView>
 
@@ -388,9 +428,11 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="24dp"
         app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView11">
@@ -405,6 +447,9 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="16dp"
                 app:cardCornerRadius="20dp"
+                app:cardBackgroundColor="#ADDBFF"
+                app:cardElevation="0dp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -413,6 +458,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="8dp"
+                    app:tint="@color/AppTextColour"
                     android:src="@drawable/ic_outline_info_24" />
             </androidx.cardview.widget.CardView>
 
@@ -446,11 +492,13 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="24dp"
         android:id="@+id/logout"
         android:layout_marginRight="24dp"
         app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView12">
@@ -463,8 +511,11 @@
                 android:id="@+id/cardView513"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                app:cardBackgroundColor="#FFA7A7"
                 android:layout_marginLeft="16dp"
                 app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -474,6 +525,7 @@
                     android:layout_height="match_parent"
                     android:padding="8dp"
                     android:scaleX="-1"
+                    app:tint="@color/AppTextColour"
                     android:src="@drawable/ic_baseline_login_24" />
             </androidx.cardview.widget.CardView>
 
